# scon

./: .gitignore  Cargo.toml  README.md  settings.gradle.kts
.github/: dependabot.yml
crates/scon-core/: Cargo.toml
crates/scon-core/src/: analysis.rs  error.rs  eval.rs  format.rs  lib.rs  loader.rs  parser.rs  ser.rs  source.rs  value.rs
crates/scon-core/tests/: conformance.rs
crates/scon-lsp/: Cargo.toml
crates/scon-lsp/src/: completion.rs  config.rs  definition.rs  diagnostics.rs  formatting.rs  hover.rs  main.rs  position.rs  server.rs  state.rs  symbols.rs
csharp/: .gitignore  README.md  Scon.slnx
docs/: lsp.md  lsp_production_ready_progress.md  release_checklist.md  scon_v0_1_draft_spec.md  troubleshooting.md
fuzz/: README.md
go/: .gitignore  README.md  go.mod
java/: .gitignore  README.md  pom.xml
kotlin/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
python/: .gitignore  README.md  pyproject.toml
python/fuzz/: format_source_fuzz.py  parse_string_fuzz.py
python/src/scon/: __init__.py  analysis.py  error.py  format.py  lexer.py  parser.py  resolver.py  source_format.py  typed.py  value.py
python/tests/: test_conformance.py  test_typed.py
rust/: .gitignore
rust/crates/scon-core/: Cargo.toml
rust/crates/scon-core/benches/: parser.rs
rust/crates/scon-core/src/: analysis.rs  ast.rs  de.rs  error.rs  format.rs  lib.rs
rust/crates/scon-core/tests/: conformance.rs
rust/fuzz/: Cargo.toml  README.md  sync-corpus.sh
rust/fuzz/corpus/format_source/: comments.scon  composition.scon  quoted_keys.scon
rust/fuzz/corpus/parse_str/: arrays.scon  escaped_strings.scon  fields.scon  include.scon  quoted_keys.scon  substitutions.scon  unterminated_string.scon
rust/fuzz/fuzz_targets/: format_source.rs  parse_str.rs
src/: ast.rs  de.rs  eval.rs  format.rs  lexer.rs  lib.rs  limits.rs  loader.rs  parser.rs  value.rs
swift/: .gitignore  Package.swift  README.md
tree-sitter-scon/: README.md  grammar.js  tree-sitter.json
typescript/: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
(+264 files in other folders)
