[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "realmlabs-scon"
version = "0.1.0"
description = "Python implementation of SCON"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
test = ["pytest>=8.0"]
fuzz = ["atheris>=2.3"]

[tool.hatch.build.targets.wheel]
packages = ["src/scon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
