[package]
name = "scon-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "scon"
path = "src/lib.rs"

[dependencies]
indexmap = "2"
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
smallvec = "1"
thiserror = "2"

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "parser"
harness = false
