[package]
name = "scon-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
scon = { package = "scon-core", path = "../crates/scon-core" }

[[bin]]
name = "parse_str"
path = "fuzz_targets/parse_str.rs"
test = false
doc = false
bench = false

[[bin]]
name = "format_source"
path = "fuzz_targets/format_source.rs"
test = false
doc = false
bench = false
